[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "bcp"
author = "Mike Alfare"
author-email = "alfare@gmail.com"
home-page = "https://github.com/mikealfare/bcp"

requires = []
requires-python = ">=3.6"

description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License"
]

keywords = "BCP SQLServer MSSQL"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-freezegun"
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme"
]
